--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  kclock-20200823.tar.bz2: 25c0f60bae345d18eb61937db594fe03a533fbb3
+  kclock-v0.4.0.tar.bz2: e47d6b6920ae4417d7c57bb4cdd454e6d60f6d06
