--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  kclock-v0.4.0.tar.bz2: e47d6b6920ae4417d7c57bb4cdd454e6d60f6d06
+  kclock-21.06.tar.xz: 108bc37789e4f86375e77eb2417bd79a3606509f
