--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  kclock-24.01.95.tar.xz: 331bc49585fa40faa5ed53913a0fe11a87f56336
+  kclock-release-24.02.tar.bz2: b0482e91154f030fd24296c4e1f9cf2857f2309d
