--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   kclock-release-24.02.tar.bz2: b0482e91154f030fd24296c4e1f9cf2857f2309d
+  kclock-24.02.0.tar.xz: a654c78a9070eec9b3f5285fb6a98d52d8722d98
